exports[`LaunchableAppItem should render custom icon if provided 1`] = `
<div
  className="core-app-launch-item list-group-item">
  <img
    alt="App icon"
    className="core-app-launch-item-icon"
    src="./path/to/icon.png" />
  <div>
    <h4
      className="list-group-item-heading">
      pc-nrfconnect-foobar
    </h4>
    <p
      className="list-group-item-text">
      official
      , v
      1.2.3
    </p>
  </div>
  <div
    className="core-app-launch-item-buttons">
    <button
      className="btn btn-primary core-btn"
      onClick={[Function]}
      title="Launch app">
      <span
        className="glyphicon glyphicon-play" />
      <span
        className="core-btn-text">
        Launch
      </span>
    </button>
  </div>
</div>
`;

exports[`LaunchableAppItem should render official if isOfficial is true 1`] = `
<div
  className="core-app-launch-item list-group-item">
  <img
    alt="App icon"
    className="core-app-launch-item-icon"
    src="test-file-stub" />
  <div>
    <h4
      className="list-group-item-heading">
      pc-nrfconnect-foobar
    </h4>
    <p
      className="list-group-item-text">
      official
      , v
      1.2.3
    </p>
  </div>
  <div
    className="core-app-launch-item-buttons">
    <button
      className="btn btn-primary core-btn"
      onClick={[Function]}
      title="Launch app">
      <span
        className="glyphicon glyphicon-play" />
      <span
        className="core-btn-text">
        Launch
      </span>
    </button>
  </div>
</div>
`;

exports[`LaunchableAppItem should render with displayName instead of name if provided 1`] = `
<div
  className="core-app-launch-item list-group-item">
  <img
    alt="App icon"
    className="core-app-launch-item-icon"
    src="test-file-stub" />
  <div>
    <h4
      className="list-group-item-heading">
      Foobar Tool
    </h4>
    <p
      className="list-group-item-text">
      official
      , v
      1.2.3
    </p>
  </div>
  <div
    className="core-app-launch-item-buttons">
    <button
      className="btn btn-primary core-btn"
      onClick={[Function]}
      title="Launch app">
      <span
        className="glyphicon glyphicon-play" />
      <span
        className="core-btn-text">
        Launch
      </span>
    </button>
  </div>
</div>
`;

exports[`LaunchableAppItem should render with required props 1`] = `
<div
  className="core-app-launch-item list-group-item">
  <img
    alt="App icon"
    className="core-app-launch-item-icon"
    src="test-file-stub" />
  <div>
    <h4
      className="list-group-item-heading">
      pc-nrfconnect-foobar
    </h4>
    <p
      className="list-group-item-text">
      official
      , v
      1.2.3
    </p>
  </div>
  <div
    className="core-app-launch-item-buttons">
    <button
      className="btn btn-primary core-btn"
      onClick={[Function]}
      title="Launch app">
      <span
        className="glyphicon glyphicon-play" />
      <span
        className="core-btn-text">
        Launch
      </span>
    </button>
  </div>
</div>
`;
